--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@ A job-hunting website for people with disabilities. <br> <strong> <b> <a href="h
 
 <div class="wrapper">
 	  	<ul class="social-icons icon-circle icon-rotate list-unstyled list-inline"> 
-	      <li><a href="https://www.linkedin.com/in/shreya-chopra-43a112200/"><i class="fa fa-github"></i></a> </li> 
-	      <li><a href="https://github.com/ShreyaChopra13"><i class="fa fa-linkedin"></i></a> </li>   
+	      <li><a href="https://github.com/ShreyaChopra13"><i class="fa fa-github"></i></a> </li> 
+	      <li><a href="https://www.linkedin.com/in/shreya-chopra-43a112200/"><i class="fa fa-linkedin"></i></a> </li>   
 	      <li> <a href="mailto: shreyachopracoe@gmail.com, schopra1_be20@thapar.edu"><i class="fa fa-google-plus"></i></a> </li>
 	      <!-- <li> <a href="#"><i class="fa fa-bitbucket"></i></a> </li> 
 	      <li> <a href="#"><i class="fa fa-bitcoin"></i></a> </li> 
