--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 		  <div class="flex-grid-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/arduino/arduino-original-wordmark.svg" /></div>
 		  <div class="flex-grid-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/photoshop/photoshop-plain.svg" /></div>
 		  <div class="flex-grid-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/figma/figma-original.svg" /></div>
+		  <div class="flex-grid-item"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/canva/canva-original.svg" /></div>
 		  <div class="flex-grid-item"><img src="flask.png" /></div>
 		  <!-- <div class="flex-grid-item blank"></div> -->
 		</div>
